RESOLVED FIXED238569
Crash the WebContent process if the RemoteRenderingBackend::PrepareBuffersForDisplay IPC fails
https://bugs.webkit.org/show_bug.cgi?id=238569
Summary Crash the WebContent process if the RemoteRenderingBackend::PrepareBuffersFor...
Simon Fraser (smfr)
Reported 2022-03-30 12:23:39 PDT
Crash the WebContent process if the RemoteRenderingBackend::PrepareBuffersForDisplay IPC fails
Attachments
Patch (2.21 KB, patch)
2022-03-30 12:24 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2022-03-30 12:24:35 PDT
EWS
Comment 2 2022-03-30 23:05:31 PDT
Committed r292143 (249050@main): <https://commits.webkit.org/249050@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 456164 [details].
Radar WebKit Bug Importer
Comment 3 2022-03-30 23:06:19 PDT
Note You need to log in before you can comment on or make changes to this bug.