Crash the WebContent process if the RemoteRenderingBackend::PrepareBuffersForDisplay IPC fails https://bugs.webkit.org/show_bug.cgi?id=238569

Reviewed by Kimmo Kinnunen.

We can't sensibly recover from RemoteRenderingBackend::PrepareBuffersForDisplay IPC failing,
which can happen when the GPU process crashes, so just crash the WebContent process.

* WebProcess/GPU/graphics/RemoteRenderingBackendProxy.cpp:
(WebKit::RemoteRenderingBackendProxy::prepareBuffersForDisplay):



Canonical link: https://commits.webkit.org/249050@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292143 268f45cc-cd09-0410-ab3c-d52691b4dbfc